Addressed review comments part 3

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -977,6 +977,7 @@ Metrics/CyclomaticComplexity:
   Enabled: true
 
 Metrics/LineLength:
+  max: 140
   Description: 'Limit lines to 80 characters.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#80-character-limits'
   Enabled: true
